ajout de la commande dans le readme